fix alignment on entry hover

--- a/source/style.css
+++ b/source/style.css
@@ -134,7 +134,6 @@ div > textarea {
 
 .delete {
     visibility: hidden; 
-    display: none;
 }
 
 .delete:before {
